# Habit-tracker

./: .coveragerc  .env.example  .flake8  .gitignore  pyproject.toml
config/: settings.py  urls.py
tracker/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
tracker/migrations/: 0001_initial.py  0002_initial.py  0003_rename_action_time_habit_duration.py  0004_alter_habit_options.py  0005_alter_habit_options.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_phone.py  0003_customuser_tg_chat_id_customuser_tg_username.py
